# Workday_RSVP_Discord_Bot

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: docs.yml  lint.yml  tests.yml
docs/: conf.py  index.rst
docs/api/: index.rst
docs/api/rsvp_bot/: bot.rst  config.rst  embeds.rst  index.rst  models.rst  summary.rst  utils.rst  views.rst
docs/api/rsvp_bot/commands/: admin.rst  checks.rst  ctx.rst  debug.rst  directory.rst  index.rst  reports.rst
docs/api/rsvp_bot/db/: channels.rst  core.rst  directory.rst  index.rst  migrations.rst  pairs.rst  reminders.rst  rsvps.rst  schema.rst
docs/api/rsvp_bot/services/: index.rst  panel_service.rst  rsvp_service.rst  scheduler_service.rst
docs/concepts/: architecture.rst  directory-system.rst  panels.rst  scheduling.rst
docs/getting-started/: installation.rst  quickstart.rst
docs/user-guide/: commands.rst  dev-vs-prod.rst
src/rsvp_bot/: __init__.py  bot.py  config.py  db.py  embeds.py  models.py  rsvp_view.py  scheduler.py  summary.py  utils.py  views.py
src/rsvp_bot/commands/: __init__.py  admin.py  checks.py  ctx.py  debug.py  directory.py  reports.py
src/rsvp_bot/db/: __init__.py  channels.py  core.py  directory.py  migrations.py  pairs.py  reminders.py  rsvps.py  schema.py
src/rsvp_bot/services/: __init__.py  panel_service.py  rsvp_service.py  scheduler_service.py
tests/: conftest.py  test_commands_admin.py  test_commands_debug.py  test_commands_directory.py  test_commands_reports.py  test_db_channels_ops.py  test_db_directory_ops.py  test_db_init.py  test_db_reminders_ops.py  test_db_rsvps_ops.py  test_services_panel.py  test_services_rsvp.py  test_services_scheduler.py  test_smoke.py  test_summary_and_embeds.py  test_utils.py
