[project]
name = "rsvp-bot"
dynamic = ["version"]
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
# Focus: unused stuff + obvious mistakes, keep it conservative
select = ["F", "I"]
# F = pyflakes (unused imports/vars, undefined names, etc.)
# I = import sorting (we won't auto-fix yet)

[tool.ruff.lint.per-file-ignores]
# If you have __init__.py that intentionally re-export things
"__init__.py" = ["F401"]
