[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rsvp-bot"
dynamic = ["version"]
description = "A Discord bot that collects attendance declarations for upcoming workdays."
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE*"]

authors = [{ name = "Giacomo Terreran", email = "gterreran@adlerplanetarium.org" }]

dependencies = [
  "discord.py>=2.3",
  "python-dotenv>=1.0",
  "aiosqlite>=0.19"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
]

docs = [
  "sphinx>=7.0",
  "furo>=2024.0.0",
  "sphinx-autobuild>=2024.0.0",
]

dev = [
  "rsvp-bot[test,docs]",

  # lint tooling
  "ruff>=0.6",

  # packaging/release helpers
  "build>=1.2",
  "twine>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/gterreran/Workday_RSVP_Discord_Bot"
Source = "https://github.com/gterreran/Workday_RSVP_Discord_Bot"
Issues = "https://github.com/gterreran/Workday_RSVP_Discord_Bot/issues"

[project.scripts]
rsvp-bot = "rsvp_bot.bot:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# If you use git tags for versions, this will populate dynamic version automatically.
# Remove this block if you don't want setuptools-scm.
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:discord.*",
]
asyncio_mode = "auto"